<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alexiscr.lescotranslator.UI.TranslatorActivity"
    android:background="@color/mainBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_above="@+id/linearLayout2">

        <ImageSwitcher
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:foregroundGravity="top"
            android:layout_gravity="center"
            android:id="@+id/imageSwitcherResults" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:foregroundGravity="bottom"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="28sp"
            android:id="@+id/textViewWordRepresentation" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/linearLayout2"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:id="@+id/imageButtonPrevious"
            android:src="@android:drawable/ic_media_rew"
            android:background="@drawable/circle"
            android:contentDescription="@string/previous" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:src="@android:drawable/ic_media_pause"
            android:background="@drawable/circle"
            android:contentDescription="@string/pause"
            android:id="@+id/imageButtonPause" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:src="@android:drawable/ic_media_ff"
            android:background="@drawable/circle"
            android:contentDescription="@string/next"
            android:id="@+id/imageButtonNext" />
    </LinearLayout>
</RelativeLayout>
