<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_words"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alexiscr.lescotranslator.UI.PersonalizeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:textSize="19sp"
        android:textStyle="normal|bold|italic"
        android:text="@string/add_word" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/buttonOpenMedia"
        android:background="@drawable/circle"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_alignTop="@+id/editTextAddNewWord"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/open_image" />

    <Button
        android:layout_width="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonSaveWord"
        android:src="@drawable/icon_microphone"
        android:background="@drawable/icon_save"
        android:layout_height="40dp" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:id="@+id/editTextAddNewWord"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_width="280dp" />

    <ImageView
        android:layout_width="301dp"
        android:id="@+id/imageViewToShowNewImage"
        android:contentDescription="@string/photo"
        android:adjustViewBounds="false"
        android:foregroundGravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_height="313dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
